# OUGL

./: .gitignore  CMakeLists.txt  LICENSE  framebuffer.cpp  framebuffer.h  main.cpp  parameters.cpp  parameters.h  planet.cpp  planet.h  player.cpp  player.h  renderbuffer.cpp  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  voxelcoords.h
shaders/: hdr.frag.glsl  hdr.vert.glsl  planet.frag.glsl  planet.vert.glsl  terrain.comp.glsl  terrain.comp.glsl.autosave  terrain2.comp.glsl
src/: circularbuffer.h  components.h  framebuffer.cpp  framebuffer.h  input.cpp  input.h  main.cpp  parameters.cpp  parameters.h  planet.cpp  planet.h  planetmath.cpp  planetmath.h  player.cpp  rawbufferview.h  renderbuffer.h  scene.cpp  scene.h  shader.cpp  shader.h  terrain.cpp  terrain.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  voxelcoords.cpp  voxelcoords.h
src/ecs/: CMakeLists.txt  ecsengine.cpp  ecsengine.h  entity.cpp  entity.h  entitysystem.h
src/entitysystems/: camerasystem.cpp  camerasystem.h  inputsystem.cpp  inputsystem.h  planetsystem.cpp  planetsystem.h  rendersystem.cpp  rendersystem.h  shaders.cpp  shaders.h
src/graphics/: CMakeLists.txt  devicebuffer.cpp  devicebuffer.h  framebuffer.cpp  glquery.cpp  glquery.h  rawbufferview.cpp  rawbufferview.h  renderbuffer.cpp  renderbuffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h
src/shaders/: hdr.frag.glsl  hdr.vert.glsl  planet.frag.glsl  planet.vert.glsl  quad.vert.glsl  sky.frag.glsl  sky.vert.glsl  skyfromspace.frag.glsl  skyfromspace.vert.glsl  terrain.comp.glsl  terrain2.comp.glsl
